deploy/9-infra/configure-nexadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexadmin-ingress-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nexadmin-svc
                port:
                  number: 21611
            path: /nexadmin
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 172.17.0.2
